--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
-
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Food</title>
@@ -11,8 +10,7 @@
 
 <body>
     <div class="wrapper">
-
-        <header class="header">
+                <header class="header">
             <div class="container">
 
                 <nav class="menu">
@@ -59,14 +57,8 @@
                 </nav>
             </div>
         </header>
-
         <main class="main">
-
-            <h1 class="sr-only">
-                Сервіс доставки їжі
-            </h1>
-
-            <section class="hero section">
+                        <section class="hero section">
                 <div class="container">
 
                     <div class="hero__inner"
@@ -95,8 +87,7 @@
                     </div>
                 </div>
             </section>
-
-            <section class="categories section">
+                        <section class="categories section">
                 <div class="container">
                     <div class="categories__inner">
 
@@ -122,7 +113,8 @@
 
                             <li class="categories__item">
                                 <button class="btn categories__btn" type="button">
-                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-sandvich"></span>
+                                    <span
+                                        class="icon-mask icon-masc--category icon-mask--icon-category-sandvich"></span>
                                     Сендвічі
                                 </button>
                             </li>
@@ -286,35 +278,193 @@
                     </div>
                 </div>
             </section>
-        </main>
+                        <section class="features section">
+                <div class="container">
+                    <div class="features__inner"
+                        style="background-image: image-set(url('/images/features/food_delivery@1x.webp') type('image/webp') 1x, url('/images/features/food_delivery@2x.webp') type('image/webp') 2x);">
 
-        <footer class="footer">
+                        <div class="features__content">
+
+                            <h2 class="title features__title">
+                                Залишайтеся вдома, а ми потурбуємося про їжу
+                            </h2>
+
+                            <div class="features__text">
+                                <p>
+                                    У нас є смачна їжа і ми готові доставити її до вас додому! Скористайтеся нашою
+                                    доставкою прямо
+                                    зараз та отримайте знижку!
+                                </p>
+                            </div>
+
+                            <ul class="features__list">
+                                <li class="features__item">
+                                    <span class="icon-mask features__icon-time"></span>
+                                    Швидка доставка за 15 хвилин
+                                </li>
+
+                                <li class="features__item">
+                                    <span class="icon-mask features__icon-delivery"></span>
+                                    Чемні кур’єри
+                                </li>
+
+                                <li class="features__item">
+                                    <span class="icon-mask features__icon-restorant"></span>
+                                    Більше 500 закладів
+                                </li>
+                            </ul>
+
+                            <button class="btn features__btn">
+                                Детальніше
+                            </button>
+
+                        </div>
+                    </div>
+            </section>
+                        <section class="restaurant section">
+                <div class="container">
+                    <h2 class="title restaurant__title">
+                        Найкращі ресторани
+                    </h2>
+
+                    <ul class="restaurant__list">
+                        <li class="restaurant__item">
+                            <article class="rest-card">
+                                <a class="rest-card__link" href="#">
+                                    <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="">
+                                    <span class="rest-card__title">Blaze Pizza</span>
+                                    <span class="rest-card__time">11:00 - 22:00</span>
+                                </a>
+                                <button class="rest__btn"></button>
+                            </article>
+                        </li>
+
+                        <li class="restaurant__item">
+                            <article class="rest-card">
+                                <a class="rest-card__link" href="#">
+                                    <img class="rest-card__img" src="./images/restaurant/resto_2@x1.webp" alt="">
+                                    <span class="rest-card__title">Pizza Runcho</span>
+                                    <span class="rest-card__time">12:00 - 21:00</span>
+                                </a>
+                                <button class="rest__btn"></button>
+                            </article>
+                        </li>
+
+                        <li class="restaurant__item">
+                            <article class="rest-card">
+                                <a class="rest-card__link" href="#">
+                                    <img class="rest-card__img" src="./images/restaurant/resto_3@x1.webp" alt="">
+                                    <span class="rest-card__title">Pizza Hut</span>
+                                    <span class="rest-card__time">11:00 - 22:00</span>
+                                </a>
+                                <button class="rest__btn"></button>
+                            </article>
+                        </li>
+
+                        <li class="restaurant__item">
+                            <article class="rest-card">
+                                <a class="rest-card__link" href="#">
+                                    <img class="rest-card__img" src="./images/restaurant/resto_4@x1.webp" alt="">
+                                    <span class="rest-card__title">McDonald`s</span>
+                                    <span class="rest-card__time">06:00 - 23:00</span>
+                                </a>
+                                <button class="rest__btn"></button>
+                            </article>
+                        </li>
+
+                        <li class="restaurant__item">
+                            <article class="rest-card">
+                                <a class="rest-card__link" href="#">
+                                    <img class="rest-card__img" src="./images/restaurant/resto_5@x1.webp" alt="">
+                                    <span class="rest-card__title">KFC</span>
+                                    <span class="rest-card__time">06:00 - 23:30</span>
+                                </a>
+                                <button class="rest__btn"></button>
+                            </article>
+                        </li>
+
+                        <li class="restaurant__item">
+                            <article class="rest-card">
+                                <a class="rest-card__link" href="#">
+                                    <img class="rest-card__img" src="./images/restaurant/resto_6@x1.webp" alt="">
+                                    <span class="rest-card__title">Star Burgers</span>
+                                    <span class="rest-card__time">09:00 - 21:00</span>
+                                </a>
+                                <button class="rest__btn"></button>
+                            </article>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+                        <section class="review section">
+                <div class="container">
+                    <h2 class="title">
+                        Відгуки клієнтів
+                    </h2>
+                    <div class="review__inner">
+                        <blockquote class="review__blockquote">
+                            <p class="review__paragraph">
+                                SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та дарує знижки на доставку - однозначно рекомендую!
+                            </p>
+                            
+                        </blockquote>
+                    </div>
+                </div>
+            </section>
+                        <section class="application section">
+                <div class="container">
+                    <div class="application__inner">
+                        <h2 class="title">
+                            Завантажте мобільний застосунок
+                        </h2>
+
+                        <div class="application__paragraph">
+                            <p>Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному місці в зручний час</p>
+                        </div>
+
+                        <ul class="application__list">
+                            <li class="application__item">
+                                <a class="application__link" href="#"></a>
+                            </li>
+
+                            <li class="application__item">
+                                <a class="application__link" href="#"></a>
+                            </li>
+                        </ul>
+                        
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
+            <footer class="footer">
             <div class="container">
 
                 <div class="footer__inner">
 
                     <div class="footer__box">
 
-                    <a class="logo footer__logo" href="#">
-                        <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
-                    </a>
+                        <a class="logo footer__logo" href="#">
+                            <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200"
+                                height="39">
+                        </a>
 
-                    <form class="form" action="#">
+                        <form class="form" action="#">
 
-                        <label class="form__label" for="email">
-                            <input class="form__input" type="email" name="email" id="email" placeholder="Ваш email"
-                                required>
-                            <span class="sr-only">Впишіть ваш імейл</span>
-                        </label>
+                            <label class="form__label" for="email">
+                                <input class="form__input" type="email" name="email" id="email" placeholder="Ваш email"
+                                    required>
+                                <span class="sr-only">Впишіть ваш імейл</span>
+                            </label>
 
-                        <button class="btn form__btn" type="submit">
-                            <span class="icon-mask form__btn--icon-telegram"></span>
-                            Підписатися
-                        </button>
+                            <button class="btn form__btn" type="submit">
+                                <span class="icon-mask form__btn--icon-telegram"></span>
+                                Підписатися
+                            </button>
 
-                    </form>
+                        </form>
 
-                </div>
+                    </div>
 
                     <ul class="footer__list">
                         <li class="footer__item">
@@ -382,19 +532,22 @@
                     <address class="address">
                         <ul class="address__list">
                             <li class="address__item">
-                                <a class="icon-mask address__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></a>
+                                <a class="icon-mask address__icon" href="#"
+                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></a>
                                 <a class="link address__link" href="#">
                                     вул. Т.Г.Шевченка, 1
                                 </a>
                             </li>
                             <li class="address__item">
-                                <a class="icon-mask address__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></a>
+                                <a class="icon-mask address__icon" href="#"
+                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></a>
                                 <a class="link address__link" href="tel:+380501112233">
                                     380501112233
                                 </a>
                             </li>
                             <li class="address__item">
-                                <a class="icon-mask address__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></a>
+                                <a class="icon-mask address__icon" href="#"
+                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></a>
                                 <a class="link address__link" href="mailto:support@sfood.com">
                                     support@sfood.com
                                 </a>
@@ -404,24 +557,27 @@
                         <ul class="social">
 
                             <li class="social__item">
-                                    <a class="icon-mask social__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></a>
-                                    <span class="sr-only">
-                                        Відкрити сторінку Facebook
-                                    </span>
+                                <a class="icon-mask social__icon" href="#"
+                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></a>
+                                <span class="sr-only">
+                                    Відкрити сторінку Facebook
+                                </span>
                             </li>
 
                             <li class="social__item">
-                                    <a class="icon-mask social__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></a>
-                                    <span class="sr-only">
-                                        Відкрити сторінку Twitter
-                                    </span>
+                                <a class="icon-mask social__icon" href="#"
+                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></a>
+                                <span class="sr-only">
+                                    Відкрити сторінку Twitter
+                                </span>
                             </li>
 
                             <li class="social__item">
-                                    <a class="icon-mask social__icon" href="#" style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></a>
-                                    <span class="sr-only">
-                                        Відкрити сторінку Instagram
-                                    </span>
+                                <a class="icon-mask social__icon" href="#"
+                                    style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></a>
+                                <span class="sr-only">
+                                    Відкрити сторінку Instagram
+                                </span>
                             </li>
 
                         </ul>
@@ -435,8 +591,6 @@
                 &copy; 2023 Simple Food
             </a>
         </footer>
-
-    </div>
     <script src="./js/main.js"></script>
 </body>
 
