--- a/src/module/application/_application.html
+++ b/src/module/application/_application.html
@@ -1,24 +1,42 @@
-            <section class="application section">
-                <div class="container">
-                    <div class="application__inner">
-                        <h2 class="title">
-                            Завантажте мобільний застосунок
-                        </h2>
+<section class="application section">
+    <div class="container">
+        <div class="application__inner">
 
-                        <div class="application__paragraph">
-                            <p>Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному місці в зручний час</p>
-                        </div>
+            <div class="application__box">
 
-                        <ul class="application__list">
-                            <li class="application__item">
-                                <a class="application__link" href="#"></a>
-                            </li>
+                <h2 class="title application__title">
+                    Завантажте мобільний застосунок
+                </h2>
 
-                            <li class="application__item">
-                                <a class="application__link" href="#"></a>
-                            </li>
-                        </ul>
-                        
-                    </div>
+                <div class="application__paragraph">
+                    <p>Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному
+                        місці в зручний час</p>
                 </div>
-            </section>
+
+                <ul class="application__list">
+                    <li class="application__item">
+                        <a class="application__link" href="#">
+                            <img class="application__marketplace-link" src="../../images/application/app_store@1x.webp"
+                                alt="єпл стор" srcset="../../images/application/app_store@2x.webp 2000w" width="120"
+                                height="40">
+                        </a>
+                    </li>
+
+                    <li class="application__item">
+                        <a class="application__link" href="#">
+                            <img class="application__marketplace-link" src="../../images/application/play_store@2x.webp"
+                                alt="єпл стор" srcset="../../images/application/play_store@2x.webp 2000w" width="135"
+                                height="40">
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <img class="application__img" src="../../images/application/get_app@1x.webp"
+                alt="В руці телефон на фоні смачний салат" srcset="../../images/application/get_app@2x.webp 2000w"
+                width="570" height="380">
+
+        </div>
+    </div>
+</section>
