--- a/src/module/features/_features.html
+++ b/src/module/features/_features.html
@@ -1,7 +1,9 @@
             <section class="features section">
                 <div class="container">
-                    <div class="features__inner"
-                        style="background-image: image-set(url('/images/features/food_delivery@1x.webp') type('image/webp') 1x, url('/images/features/food_delivery@2x.webp') type('image/webp') 2x);">
+                    <div class="features__inner">
+
+                        <img class="features__img" src="../../images/features/food_delivery@1x.webp" alt="курье віддає їжу з єкрану телефону"
+                        srcset="../../images/features/food_delivery@2x.webp 2000w" width="440" height="585">
 
                         <div class="features__content">
 
@@ -19,17 +21,20 @@
 
                             <ul class="features__list">
                                 <li class="features__item">
-                                    <span class="icon-mask features__icon-time"></span>
+                                    <span class="icon-mask icon-masc--features icon-mask--icon-timer"></span>
+                                    <span class="features__des"></span>
                                     Швидка доставка за 15 хвилин
                                 </li>
 
                                 <li class="features__item">
-                                    <span class="icon-mask features__icon-delivery"></span>
+                                    <span class="icon-mask icon-masc--features icon-mask--icon-delivery"></span>
+                                    <span class="features__des"></span>
                                     Чемні кур’єри
                                 </li>
 
                                 <li class="features__item">
-                                    <span class="icon-mask features__icon-restorant"></span>
+                                    <span class="icon-mask icon-masc--features icon-mask--icon-restorant"></span>
+                                    <span class="features__desc"></span>
                                     Більше 500 закладів
                                 </li>
                             </ul>
