--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                 <div class="container">
 
                     <div class="hero__inner"
-                        style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);">
+                        style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);" width="560" height="680">
 
                         <div class="hero__content">
 
@@ -280,8 +280,10 @@
             </section>
                         <section class="features section">
                 <div class="container">
-                    <div class="features__inner"
-                        style="background-image: image-set(url('/images/features/food_delivery@1x.webp') type('image/webp') 1x, url('/images/features/food_delivery@2x.webp') type('image/webp') 2x);">
+                    <div class="features__inner">
+
+                        <img class="features__img" src="../../images/features/food_delivery@1x.webp" alt="курье віддає їжу з єкрану телефону"
+                        srcset="../../images/features/food_delivery@2x.webp 2000w" width="440" height="585">
 
                         <div class="features__content">
 
@@ -299,17 +301,20 @@
 
                             <ul class="features__list">
                                 <li class="features__item">
-                                    <span class="icon-mask features__icon-time"></span>
+                                    <span class="icon-mask icon-masc--features icon-mask--icon-timer"></span>
+                                    <span class="features__des"></span>
                                     Швидка доставка за 15 хвилин
                                 </li>
 
                                 <li class="features__item">
-                                    <span class="icon-mask features__icon-delivery"></span>
+                                    <span class="icon-mask icon-masc--features icon-mask--icon-delivery"></span>
+                                    <span class="features__des"></span>
                                     Чемні кур’єри
                                 </li>
 
                                 <li class="features__item">
-                                    <span class="icon-mask features__icon-restorant"></span>
+                                    <span class="icon-mask icon-masc--features icon-mask--icon-restorant"></span>
+                                    <span class="features__desc"></span>
                                     Більше 500 закладів
                                 </li>
                             </ul>
@@ -321,120 +326,187 @@
                         </div>
                     </div>
             </section>
-                        <section class="restaurant section">
-                <div class="container">
-                    <h2 class="title restaurant__title">
-                        Найкращі ресторани
-                    </h2>
+            <section class="restaurant section">
+    <div class="container">
+        <h2 class="title restaurant__title">
+            Найкращі ресторани
+        </h2>
 
-                    <ul class="restaurant__list">
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="">
-                                    <span class="rest-card__title">Blaze Pizza</span>
-                                    <span class="rest-card__time">11:00 - 22:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
-
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_2@x1.webp" alt="">
-                                    <span class="rest-card__title">Pizza Runcho</span>
-                                    <span class="rest-card__time">12:00 - 21:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
-
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_3@x1.webp" alt="">
-                                    <span class="rest-card__title">Pizza Hut</span>
-                                    <span class="rest-card__time">11:00 - 22:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
-
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_4@x1.webp" alt="">
-                                    <span class="rest-card__title">McDonald`s</span>
-                                    <span class="rest-card__time">06:00 - 23:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
-
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_5@x1.webp" alt="">
-                                    <span class="rest-card__title">KFC</span>
-                                    <span class="rest-card__time">06:00 - 23:30</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
-
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_6@x1.webp" alt="">
-                                    <span class="rest-card__title">Star Burgers</span>
-                                    <span class="rest-card__time">09:00 - 21:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
-                    </ul>
-                </div>
-            </section>
-                        <section class="review section">
-                <div class="container">
-                    <h2 class="title">
-                        Відгуки клієнтів
-                    </h2>
-                    <div class="review__inner">
-                        <blockquote class="review__blockquote">
-                            <p class="review__paragraph">
-                                SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та дарує знижки на доставку - однозначно рекомендую!
-                            </p>
-                            
-                        </blockquote>
+        <ul class="restaurant__list">
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="Піцца Блейз"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Blaze Pizza</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">11:00 - 22:00</span>
+                        <button class="btn rest-card__btn" type="button">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
                     </div>
-                </div>
-            </section>
-                        <section class="application section">
-                <div class="container">
-                    <div class="application__inner">
-                        <h2 class="title">
-                            Завантажте мобільний застосунок
-                        </h2>
+                </article>
+            </li>
 
-                        <div class="application__paragraph">
-                            <p>Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному місці в зручний час</p>
-                        </div>
-
-                        <ul class="application__list">
-                            <li class="application__item">
-                                <a class="application__link" href="#"></a>
-                            </li>
-
-                            <li class="application__item">
-                                <a class="application__link" href="#"></a>
-                            </li>
-                        </ul>
-                        
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_2@x1.webp" alt="Піцца Ранчо"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Pizza Runcho</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">12:00 - 21:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
                     </div>
+                </article>
+            </li>
+
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_3@x1.webp" alt="Піцца Хат"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Pizza Hut</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">11:00 - 22:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
+
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_4@x1.webp"
+                            alt="Гамбургер Макдональдз" width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">McDonald`s</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">06:00 - 23:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
+
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_5@x1.webp" alt="Картопля фрі з КФС"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">KFC</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">06:00 - 23:30</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
+
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_6@x1.webp"
+                            alt="зображення Стар Бургеру" width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Star Burgers</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">09:00 - 21:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
+        </ul>
+    </div>
+</section>
+            <section class="review section">
+    <div class="container">
+        <h2 class="title review__title">
+            Відгуки клієнтів
+        </h2>
+        <div class="review__inner">
+            <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
+                srcset="../../images/review/daryna@2x.webp 2000w" width="300px" height="300px">
+            <blockquote class="review__blockquote">
+
+                <p class="review__paragraph">
+                    SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
+                    застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та дарує
+                    знижки на доставку - однозначно рекомендую!
+                </p>
+
+                <footer>
+                    <cite class="review__author">
+                        Дарина
+                    </cite>
+                    <span class="review__caption">
+                        Поціновувачка смачної їжі
+                    </span>
+                </footer>
+            </blockquote>
+        </div>
+    </div>
+</section>
+            <section class="application section">
+    <div class="container">
+        <div class="application__inner">
+
+            <div class="application__box">
+
+                <h2 class="title application__title">
+                    Завантажте мобільний застосунок
+                </h2>
+
+                <div class="application__paragraph">
+                    <p>Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному
+                        місці в зручний час</p>
                 </div>
-            </section>
+
+                <ul class="application__list">
+                    <li class="application__item">
+                        <a class="application__link" href="#">
+                            <img class="application__marketplace-link" src="../../images/application/app_store@1x.webp"
+                                alt="єпл стор" srcset="../../images/application/app_store@2x.webp 2000w" width="120"
+                                height="40">
+                        </a>
+                    </li>
+
+                    <li class="application__item">
+                        <a class="application__link" href="#">
+                            <img class="application__marketplace-link" src="../../images/application/play_store@2x.webp"
+                                alt="єпл стор" srcset="../../images/application/play_store@2x.webp 2000w" width="135"
+                                height="40">
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <img class="application__img" src="../../images/application/get_app@1x.webp"
+                alt="В руці телефон на фоні смачний салат" srcset="../../images/application/get_app@2x.webp 2000w"
+                width="570" height="380">
+
+        </div>
+    </div>
+</section>
         </main>
     </div>
             <footer class="footer">
