--- a/src/module/restaurant/_restaurant.html
+++ b/src/module/restaurant/_restaurant.html
@@ -1,75 +1,111 @@
-            <section class="restaurant section">
-                <div class="container">
-                    <h2 class="title restaurant__title">
-                        Найкращі ресторани
-                    </h2>
+<section class="restaurant section">
+    <div class="container">
+        <h2 class="title restaurant__title">
+            Найкращі ресторани
+        </h2>
 
-                    <ul class="restaurant__list">
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="">
-                                    <span class="rest-card__title">Blaze Pizza</span>
-                                    <span class="rest-card__time">11:00 - 22:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
+        <ul class="restaurant__list">
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="Піцца Блейз"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Blaze Pizza</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">11:00 - 22:00</span>
+                        <button class="btn rest-card__btn" type="button">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
 
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_2@x1.webp" alt="">
-                                    <span class="rest-card__title">Pizza Runcho</span>
-                                    <span class="rest-card__time">12:00 - 21:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_2@x1.webp" alt="Піцца Ранчо"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Pizza Runcho</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">12:00 - 21:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
 
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_3@x1.webp" alt="">
-                                    <span class="rest-card__title">Pizza Hut</span>
-                                    <span class="rest-card__time">11:00 - 22:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_3@x1.webp" alt="Піцца Хат"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Pizza Hut</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">11:00 - 22:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
 
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_4@x1.webp" alt="">
-                                    <span class="rest-card__title">McDonald`s</span>
-                                    <span class="rest-card__time">06:00 - 23:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_4@x1.webp"
+                            alt="Гамбургер Макдональдз" width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">McDonald`s</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">06:00 - 23:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
 
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_5@x1.webp" alt="">
-                                    <span class="rest-card__title">KFC</span>
-                                    <span class="rest-card__time">06:00 - 23:30</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_5@x1.webp" alt="Картопля фрі з КФС"
+                            width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">KFC</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">06:00 - 23:30</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
 
-                        <li class="restaurant__item">
-                            <article class="rest-card">
-                                <a class="rest-card__link" href="#">
-                                    <img class="rest-card__img" src="./images/restaurant/resto_6@x1.webp" alt="">
-                                    <span class="rest-card__title">Star Burgers</span>
-                                    <span class="rest-card__time">09:00 - 21:00</span>
-                                </a>
-                                <button class="rest__btn"></button>
-                            </article>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+            <li class="restaurant__item">
+                <article class="rest-card">
+                    <a class="rest-card__link" href="#">
+                        <img class="rest-card__img" src="./images/restaurant/resto_6@x1.webp"
+                            alt="зображення Стар Бургеру" width="370" height="300">
+                    </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Star Burgers</span>
+                        <span class="icon-mask  icon-mask--icon-time"></span>
+                        <span class="rest-card__time">09:00 - 21:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="icon-mask icon-mask--icon-arrow"></span>
+                        </button>
+                    </div>
+                </article>
+            </li>
+        </ul>
+    </div>
+</section>
