--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -1,15 +1,28 @@
-            <section class="review section">
-                <div class="container">
-                    <h2 class="title">
-                        Відгуки клієнтів
-                    </h2>
-                    <div class="review__inner">
-                        <blockquote class="review__blockquote">
-                            <p class="review__paragraph">
-                                SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та дарує знижки на доставку - однозначно рекомендую!
-                            </p>
-                            
-                        </blockquote>
-                    </div>
-                </div>
-            </section>
+<section class="review section">
+    <div class="container">
+        <h2 class="title review__title">
+            Відгуки клієнтів
+        </h2>
+        <div class="review__inner">
+            <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
+                srcset="../../images/review/daryna@2x.webp 2000w" width="300px" height="300px">
+            <blockquote class="review__blockquote">
+
+                <p class="review__paragraph">
+                    SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
+                    застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та дарує
+                    знижки на доставку - однозначно рекомендую!
+                </p>
+
+                <footer>
+                    <cite class="review__author">
+                        Дарина
+                    </cite>
+                    <span class="review__caption">
+                        Поціновувачка смачної їжі
+                    </span>
+                </footer>
+            </blockquote>
+        </div>
+    </div>
+</section>
