--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                                 <span class="sr-only">
                                     Почати пошук
                                 </span>
-                                <span class="icon-mask icon-mask--icon-search"></span>
+                                <span class="icon-mask user-nav--icon user-nav--icon-search"></span>
                             </button>
                         </li>
 
@@ -48,7 +48,7 @@
                                 <span class="sr-only">
                                     Відкрити корзину
                                 </span>
-                                <span class="icon-mask icon-mask--icon-cart"></span>
+                                <span class="icon-mask user-nav--icon user-nav--icon-cart"></span>
                                 <span class="user-nav__number">4</span>
                             </button>
                         </li>
@@ -62,7 +62,7 @@
                 <div class="container">
 
                     <div class="hero__inner"
-                        style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);" width="560" height="680">
+                        style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);">
 
                         <div class="hero__content">
 
@@ -80,7 +80,7 @@
                                 Замовити
                             </button>
 
-                            <a class="link link--underline" href="#">Детальніше</a>
+                            <a class="link link--underline hero__link" href="#">Детальніше</a>
 
                         </div>
 
@@ -99,36 +99,36 @@
 
                             <li class="categories__item">
                                 <button class="btn categories__btn categories__button--active" type="button">
-                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-burger"></span>
+                                    <span class="icon-mask categories__icon categories__icon-burger"></span>
                                     Бургери
                                 </button>
                             </li>
 
                             <li class="categories__item">
                                 <button class="btn categories__btn" type="button">
-                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-pizza"></span>
+                                    <span class="icon-mask categories__icon categories__icon-pizza"></span>
                                     Піца
                                 </button>
                             </li>
 
                             <li class="categories__item">
-                                <button class="btn categories__btn" type="button">
+                                <button class="btn categories__btn categories__icon--sandvich" type="button">
                                     <span
-                                        class="icon-mask icon-masc--category icon-mask--icon-category-sandvich"></span>
+                                        class="icon-mask categories__icon categories__icon-sandvich"></span>
                                     Сендвічі
                                 </button>
                             </li>
 
                             <li class="categories__item">
                                 <button class="btn categories__btn" type="button">
-                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-asia"></span>
+                                    <span class="icon-mask categories__icon categories__icon-asia"></span>
                                     Азійська кухня
                                 </button>
                             </li>
 
                             <li class="categories__item">
                                 <button class="btn categories__btn" type="button">
-                                    <span class="icon-mask icon-masc--category icon-mask--icon-category-dish"></span>
+                                    <span class="icon-mask categories__icon categories__icon-dish"></span>
                                     Cети
                                 </button>
                             </li>
