--- a/src/module/header/_header.html
+++ b/src/module/header/_header.html
@@ -27,7 +27,7 @@
                                 <span class="sr-only">
                                     Почати пошук
                                 </span>
-                                <span class="icon-mask icon-mask--icon-search"></span>
+                                <span class="icon-mask user-nav--icon user-nav--icon-search"></span>
                             </button>
                         </li>
 
@@ -36,7 +36,7 @@
                                 <span class="sr-only">
                                     Відкрити корзину
                                 </span>
-                                <span class="icon-mask icon-mask--icon-cart"></span>
+                                <span class="icon-mask user-nav--icon user-nav--icon-cart"></span>
                                 <span class="user-nav__number">4</span>
                             </button>
                         </li>
