--- a/src/module/hero/_hero.html
+++ b/src/module/hero/_hero.html
@@ -2,7 +2,7 @@
                 <div class="container">
 
                     <div class="hero__inner"
-                        style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);" width="560" height="680">
+                        style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);">
 
                         <div class="hero__content">
 
@@ -20,7 +20,7 @@
                                 Замовити
                             </button>
 
-                            <a class="link link--underline" href="#">Детальніше</a>
+                            <a class="link link--underline hero__link" href="#">Детальніше</a>
 
                         </div>
 
